# asio_server

./: .gitignore  CMakeLists.txt  README.md  client.py  create_project.py
DataStructures/: CMakeLists.txt
Utilities/: CMakeLists.txt  StringUtils.cpp
analyze/: CMakeLists.txt
client/: CMakeLists.txt
client/src/: client.cpp
docs/: CONFIGURATION.md
front/: index.html  package-lock.json  package.json  websocket-server.js
include/: WordFrequencyAnalyzer.h
include/DataStructures/: ArrayWordContainer.h  HashWordContainer.h  IWordContainer.h  ListWordContainer.h  TreeWordContainer.h
include/NodeStructures/: List.h  Node.h  Vector.h
include/Utilities/: StringUtils.h
model/: friendModel.h  userModel.h
model/include/: user.h
model/sql/: delete.sql  friend.sql  user.sql
public/: _public.cpp  _public.h
public/db/: _mysql.cpp  _mysql.h  makefile
scripts/: build_libs.sh
server/: CMakeLists.txt  server.cpp
server/include/: AsioIOContextPool.h  AsioIOServicePool.h  CServer.h  CSession.h  HTTPServer.h  LogicSystem.h  MsgNode.h  Singleton.h  code.h  const.h
server/src/: AsioIOContextPool.cpp  AsioIOServicePool.cpp  CServer.cpp  CSession.cpp  LogicSystem.cpp  MsgNode.cpp  main.cpp  server.cpp
src/: CMakeLists.txt  main.cpp
